# robotic_telescope

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  telescope.ros2_control.xacro  telescope.srdf.xacro  telescope.urdf.xacro
config/urdf/: tel.urdf
launch/: launch.py  moveit.rviz
launch/other/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
