<?xml version="1.0"?>
<package format="3">
  <name>robotic_telescope</name>
  <version>2.0.6</version>
  <description>
    <p>
      MoveIt Resources for testing:  robotic telescope
    </p>
    <p>
      Telescope project
    </p>
  </description>
  <author email="jeyaks@gmail.com">SJK </author>
  <maintainer email="jeyaks@gmail.com">SJK </maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>controller_manager</exec_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>

  <exec_depend>moveit_setup_assistant</exec_depend>


  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>



  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
